# opx-chain

./: .gitignore  .pylintrc  AGENTS.md  DESIGN.md  LICENSE  PROJECT_SPEC.md  README.md  fetcher.py  main.py  options_fetcher.py  pyproject.toml  requirements.txt  viewer.py
.githooks/: pre-commit
.github/workflows/: ci.yml  pylint.yml
config/: example.toml
docs/: DESIGN_SPEC.md  DEVELOPMENT.md  EXTERNAL_INTERFACE_SPEC.md  FETCHER_POSITIONS_SPEC.md  FIELD_REFERENCE.md  METADATA_SPEC.md  PROJECT_SPEC.md  STORAGE_SPEC.md  SYSTEM_SPEC.md  USER_GUIDE.md
options_fetcher/: __init__.py  config.py  export.py  fetch.py  greeks.py  metrics.py  normalize.py  runlog.py  utils.py  viewer.py
options_fetcher/providers/: __init__.py  base.py  yfinance.py
options_fetcher/viewer_static/: app.js  index.html  styles.css
options_fetcher_app/: config.py  export.py  fetch.py  metrics.py  normalize.py  runlog.py  viewer.py
opx/: check_positions.py  config.py  export.py  fetch.py  fetcher.py  metrics.py  normalize.py  positions.py  validate.py  viewer.py
opx/providers/: __init__.py  base.py  marketdata.py  massive.py
opx/storage/: factory.py  filesystem.py  memory.py  models.py
opx/viewer_static/: app.js  index.html  styles.css
opx_chain/: __init__.py  check_positions.py  config.py  export.py  fetch.py  fetcher.py  greeks.py  metrics.py  normalize.py  positions.py  runlog.py  schema.py  utils.py  validate.py  version.py  viewer.py
opx_chain/providers/: __init__.py  base.py  marketdata.py  massive.py  yfinance.py
opx_chain/storage/: __init__.py  _disk.py  base.py  cache.py  factory.py  filesystem.py  memory.py  serializers.py  sqlite_indexed.py
opx_chain/viewer_static/: app.js  index.html  styles.css
scripts/: capture_viewer_screenshot.py  check_version.py  run_local_quality_checks.sh
tests/: conftest.py  test_check_positions.py  test_config.py  test_export.py  test_fetch.py  test_greeks_and_metrics.py  test_main.py  test_marketdata_provider.py  test_massive_provider.py  test_metrics.py  test_normalize.py  test_positions.py  test_runlog.py  test_storage_cache.py  test_storage_filesystem.py  test_storage_memory.py  test_storage_sqlite.py  test_storage_wiring.py  test_utils.py  test_validate.py  test_version.py  test_viewer_helpers.py  test_viewer_static.py  test_yfinance_provider.py
