[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opx-chain"
version = "0.3.0"
description = "Options chain fetcher, export pipeline, and local viewer."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "marketdata-sdk-py>=1.2.0",
    "massive>=2.4.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "tomli>=2.0; python_version < '3.11'",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
    "playwright>=1.53",
    "pylint",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
parquet = [
    "pyarrow>=14.0",
]

[project.scripts]
opx-fetch = "opx_chain.fetcher:main"
opx-view = "opx_chain.viewer:main"
opx-check = "opx_chain.check_positions:main"

[tool.setuptools.packages.find]
include = ["opx_chain*"]

[tool.setuptools.package-data]
opx_chain = ["viewer_static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
relative_files = true
source = ["."]
omit = [
    "tests/*",
    "scripts/*",
    "config/*",
    "docs/*",
    ".venv/*",
    "**/__pycache__/*",
    "**/*.egg-info/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "cover"
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
